--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "json-parser",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "JSON parser written in TypeScript with the solely purpose of learning and having fun (not intended for production)",
+  "main": "build/json-parser.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dggluz/ts-json-parser"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Gonzalo Gluzman <dggluz@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "typescript": "^4.2.4"
   }
