--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Gonzalo Gluzman <dggluz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.14.34",
     "typescript": "^4.2.4"
   }
 }
